--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Demo</title>
         <link rel="stylesheet" href="index.css">
-        <script type="module" defer src="App.js"></script>
+        <script type="module" defer src="index.js"></script>
 	</head>
 	<body>
-        <div id="root"></div>
+        <div id="root">
+			<h1>Your react code not working ...</h1>
+		</div>
 	</body>
 </html>
